--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -377,6 +377,7 @@
 !Pkcapi-kernel-if.c Random Number API
 !Fkcapi-kernel-if.c kcapi_rng_init
 !Fkcapi-kernel-if.c kcapi_rng_destroy
+!Fkcapi-kernel-if.c kcapi_rng_seed
 !Fkcapi-kernel-if.c kcapi_rng_generate
   </sect1>
  </chapter>
