add hint about crypto_user.c patch

--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -386,6 +386,12 @@
       </para>
      </listitem>
     </itemizedlist>
+
+    <para>
+     In addition, the following patch must be applied if a kernel less than
+     3.19-rc1 or the cryptodev-2.6 kernel tree is used:
+     https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=5d4a5e770d97d87082067886e7097c920b338da5
+    </para>
    </sect2>
   </sect1>
 
