document the required patches

--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -392,6 +392,18 @@
      3.19-rc1 or the cryptodev-2.6 kernel tree is used:
      https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=5d4a5e770d97d87082067886e7097c920b338da5
     </para>
+
+    <para>
+     In addition, the following patch must be applied if the current
+     cryptodev-2.6 tree is not used:
+     https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=af8e80731a94ff9de9508b01d9e5d931d538dc6b
+    </para>
+
+    <para>
+     In addition, the following patch must be applied if the current
+     cryptodev-2.6 tree is not used:
+     https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=25fb8638e919bc7431a73f2fb4a9713818ae2c9d
+    </para>
    </sect2>
   </sect1>
 
