--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -352,8 +352,8 @@
     </listitem>
     <listitem>
      <para>
-      kcapi_aead_* kernel interface under review, patches available in
-      the directory kernel-patch applicable against latest cryptodev-2.6 tree
+      kcapi_rng_* kernel interface applied to cryptodev-2.6 staging tree
+      which should be integrated into kernel version 3.20
      </para>
     </listitem>
     <listitem>
@@ -430,6 +430,14 @@
      In addition, the following patch must be applied if the current
      cryptodev-2.6 tree is not used:
      https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=25fb8638e919bc7431a73f2fb4a9713818ae2c9d
+    </para>
+
+    <para>
+     The official release for the RNG interface is available with the patches
+     provided with
+     https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=2f3755381da8d592656f1ef6868fa9f96c450ba9
+     and
+     https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=5afdfd22e6ba2260129a2a7113ab0916339c4205
     </para>
    </sect2>
   </sect1>
