fix wrong closing tag

--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -110,7 +110,7 @@
     enhancements are made. This release is a bug fixe release only. The
     consumer can be left unchanged and does not need to be recompiled.
    </para>
-  <sect1>
+  </sect1>
 
   <sect1><title>Purpose Of AF_ALG</title>
    <para>
