move library into subdirectory

--- a/doc/libkcapi.tmpl
+++ b/doc/libkcapi.tmpl
@@ -352,7 +352,7 @@
     </listitem>
     <listitem>
      <para>
-      kcapi_rng_* kernel interface integrated into kernel version 3.20
+      kcapi_rng_* kernel interface integrated into kernel version 4.0
      </para>
     </listitem>
     <listitem>
@@ -440,7 +440,7 @@
     </para>
 
     <para>
-     The official release for the RNG interface should be imported into the mainline kernel with 4.1-rc1 is available with the patches
+     The official release for the AEAD interface should be imported into the mainline kernel with 4.1-rc1 is available with the patches
      provided with
      https://git.kernel.org/cgit/linux/kernel/git/herbert/cryptodev-2.6.git/commit/?id=44cac4fce9b820c37a8792df52a0e4ce33201949
      and
