--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -459,84 +459,84 @@
 
  <chapter id="API"><title>Programming Interface</title>
   <sect1><title>Common API</title>
-!Pkcapi-kernel-if.c Common API
-!Pkcapi-kernel-if.c kcapi_versionstring
-!Pkcapi-kernel-if.c kcapi_version
-!Pkcapi-kernel-if.c kcapi_pad_iv
+!Pkcapi.h Common API
+!Pkcapi.h kcapi_versionstring
+!Pkcapi.h kcapi_version
+!Pkcapi.h kcapi_pad_iv
    </sect1>
    <sect1><title>Symmetric Cipher API - Generic</title>
     <para>
      These generic API for symmetric ciphers calls are to be used for both, the
      one-shot and the stream encryption/decryption operations.
     </para>
-!Pkcapi-kernel-if.c Symmetric Cipher API
-!Fkcapi-kernel-if.c kcapi_cipher_init
-!Fkcapi-kernel-if.c kcapi_cipher_destroy
-!Fkcapi-kernel-if.c kcapi_cipher_setkey
-!Fkcapi-kernel-if.c kcapi_cipher_ivsize
-!Fkcapi-kernel-if.c kcapi_cipher_blocksize
+!Pkcapi.h Symmetric Cipher API
+!Fkcapi.h kcapi_cipher_init
+!Fkcapi.h kcapi_cipher_destroy
+!Fkcapi.h kcapi_cipher_setkey
+!Fkcapi.h kcapi_cipher_ivsize
+!Fkcapi.h kcapi_cipher_blocksize
    </sect1>
    <sect1><title>Symmetric Cipher API - One Shot</title>
-!Fkcapi-kernel-if.c kcapi_cipher_encrypt
-!Fkcapi-kernel-if.c kcapi_cipher_decrypt
+!Fkcapi.h kcapi_cipher_encrypt
+!Fkcapi.h kcapi_cipher_decrypt
    </sect1>
    <sect1><title>Symmetric Cipher API - Stream</title>
     <para>The stream API requires that first the cipher operation type is
     set with the init call, followed by an arbitrary number and mix of the
     update and op calls.</para>
-!Fkcapi-kernel-if.c kcapi_cipher_stream_init_enc
-!Fkcapi-kernel-if.c kcapi_cipher_stream_init_dec
-!Fkcapi-kernel-if.c kcapi_cipher_stream_update
-!Fkcapi-kernel-if.c kcapi_cipher_stream_op
+!Fkcapi.h kcapi_cipher_stream_init_enc
+!Fkcapi.h kcapi_cipher_stream_init_dec
+!Fkcapi.h kcapi_cipher_stream_update
+!Fkcapi.h kcapi_cipher_stream_op
    </sect1>
    <sect1><title>AEAD Cipher API - Generic</title>
     <para>
      These generic API for symmetric ciphers calls are to be used for both, the
      one-shot and the stream encryption/decryption operations.
     </para>
-!Pkcapi-kernel-if.c AEAD Cipher API
-!Fkcapi-kernel-if.c kcapi_aead_init
-!Fkcapi-kernel-if.c kcapi_aead_destroy
-!Fkcapi-kernel-if.c kcapi_aead_setkey
-!Fkcapi-kernel-if.c kcapi_aead_setassoclen
-!Fkcapi-kernel-if.c kcapi_aead_settaglen
-!Fkcapi-kernel-if.c kcapi_aead_ivsize
-!Fkcapi-kernel-if.c kcapi_aead_blocksize
-!Fkcapi-kernel-if.c kcapi_aead_authsize
-!Fkcapi-kernel-if.c kcapi_aead_ccm_nonce_to_iv
-!Fkcapi-kernel-if.c kcapi_aead_getdata
+!Pkcapi.h AEAD Cipher API
+!Fkcapi.h kcapi_aead_init
+!Fkcapi.h kcapi_aead_destroy
+!Fkcapi.h kcapi_aead_setkey
+!Fkcapi.h kcapi_aead_setassoclen
+!Fkcapi.h kcapi_aead_settaglen
+!Fkcapi.h kcapi_aead_ivsize
+!Fkcapi.h kcapi_aead_blocksize
+!Fkcapi.h kcapi_aead_authsize
+!Fkcapi.h kcapi_aead_ccm_nonce_to_iv
+!Fkcapi.h kcapi_aead_getdata
    </sect1>
    <sect1><title>AEAD Cipher API - One Shot</title>
-!Fkcapi-kernel-if.c kcapi_aead_encrypt
-!Fkcapi-kernel-if.c kcapi_aead_decrypt
+!Fkcapi.h kcapi_aead_encrypt
+!Fkcapi.h kcapi_aead_decrypt
    </sect1>
       <sect1><title>AEAD Cipher API - Stream</title>
-!Fkcapi-kernel-if.c kcapi_aead_stream_init_enc
-!Fkcapi-kernel-if.c kcapi_aead_stream_init_dec
-!Fkcapi-kernel-if.c kcapi_aead_stream_update
-!Fkcapi-kernel-if.c kcapi_aead_stream_update_last
-!Fkcapi-kernel-if.c kcapi_aead_stream_op
+!Fkcapi.h kcapi_aead_stream_init_enc
+!Fkcapi.h kcapi_aead_stream_init_dec
+!Fkcapi.h kcapi_aead_stream_update
+!Fkcapi.h kcapi_aead_stream_update_last
+!Fkcapi.h kcapi_aead_stream_op
    </sect1>
    <sect1><title>Message Digest Cipher API - Generic</title>
-!Pkcapi-kernel-if.c Message Digest Cipher API
-!Fkcapi-kernel-if.c kcapi_md_init
-!Fkcapi-kernel-if.c kcapi_md_destroy
-!Fkcapi-kernel-if.c kcapi_md_setkey
-!Fkcapi-kernel-if.c kcapi_md_digestsize
+!Pkcapi.h Message Digest Cipher API
+!Fkcapi.h kcapi_md_init
+!Fkcapi.h kcapi_md_destroy
+!Fkcapi.h kcapi_md_setkey
+!Fkcapi.h kcapi_md_digestsize
    </sect1>
    <sect1><title>Message Digest Cipher API - One Shot</title>
-!Fkcapi-kernel-if.c kcapi_md_digest
+!Fkcapi.h kcapi_md_digest
    </sect1>
    <sect1><title>Message Digest Cipher API - Stream</title>
-!Fkcapi-kernel-if.c kcapi_md_update
-!Fkcapi-kernel-if.c kcapi_md_final
+!Fkcapi.h kcapi_md_update
+!Fkcapi.h kcapi_md_final
    </sect1>
    <sect1><title>Random Number API</title>
-!Pkcapi-kernel-if.c Random Number API
-!Fkcapi-kernel-if.c kcapi_rng_init
-!Fkcapi-kernel-if.c kcapi_rng_destroy
-!Fkcapi-kernel-if.c kcapi_rng_seed
-!Fkcapi-kernel-if.c kcapi_rng_generate
+!Pkcapi.h Random Number API
+!Fkcapi.h kcapi_rng_init
+!Fkcapi.h kcapi_rng_destroy
+!Fkcapi.h kcapi_rng_seed
+!Fkcapi.h kcapi_rng_generate
   </sect1>
  </chapter>
 </book>
