--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -469,6 +469,9 @@
 
  <chapter id="API"><title>Programming Interface</title>
   <sect1><title>Common API</title>
+    <para>
+     The verbosity of the library can be configured with kcapi_verbosity.
+    </para>
 !Pkcapi.h Common API
 !Pkcapi.h kcapi_versionstring
 !Pkcapi.h kcapi_version
