add kcapi_set_verbosity function

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -469,14 +469,12 @@
 
  <chapter id="API"><title>Programming Interface</title>
   <sect1><title>Common API</title>
-    <para>
-     The verbosity of the library can be configured with kcapi_verbosity.
-    </para>
 !Pkcapi.h Common API
-!Pkcapi.h kcapi_versionstring
-!Pkcapi.h kcapi_version
-!Pkcapi.h kcapi_pad_iv
-!Pkcapi.h kcapi_memset_secure
+!Fkcapi.h kcapi_set_verbosity
+!Fkcapi.h kcapi_versionstring
+!Fkcapi.h kcapi_version
+!Fkcapi.h kcapi_pad_iv
+!Fkcapi.h kcapi_memset_secure
    </sect1>
    <sect1><title>Symmetric Cipher API - Generic</title>
     <para>
