add KDF and PBKDF

--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -571,5 +571,11 @@
 !Fkcapi.h kcapi_akcipher_stream_update
 !Fkcapi.h kcapi_akcipher_stream_op
    </sect1>
+   <sect1><title>Key Derivation Functions</title>
+!Pkcapi.h Key Derivation Functions
+!Fkcapi.h kcapi_kdf_dpi
+!Fkcapi.h kcapi_kdf_fb
+!Fkcapi.h kcapi_kdf_ctr
+   </sect1>
  </chapter>
 </book>
