--- a/lib/doc/libkcapi.tmpl
+++ b/lib/doc/libkcapi.tmpl
@@ -576,6 +576,8 @@
 !Fkcapi.h kcapi_kdf_dpi
 !Fkcapi.h kcapi_kdf_fb
 !Fkcapi.h kcapi_kdf_ctr
+!Fkcapi.h kcapi_pbkdf
+!Fkcapi.h kcapi_pbkdf_iteration_count
    </sect1>
  </chapter>
 </book>
